--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tinder Simple con Imágenes</title>
+  <title>Japotinder 2026</title>
   <style>
     body {
       margin: 0;
@@ -342,3 +342,4 @@
 
 </body>
 </html>
+
