--- a/index.html
+++ b/index.html
@@ -158,18 +158,18 @@
     { name: "Gotokuji", img: "img/gotokuji.jpg" },
     { name: "Pokemon Cafe", img: "img/pokemon.jpg" },
     { name: "Shikisai no oka", img: "img/shikisai.jpg" },
-    { name: "Shinkansen Hello Kitty", img: "img/hellokittytrain.jpg" },
-    { name: "Maid cafe", img: "img/maidcafe.jpg" },
+    { name: "Shinkansen Hello Kitty", img: "img/hello-kitty.jpg" },
+    { name: "Maid cafe", img: "img/maid.jpg" },
     { name: "Nabana no sato", img: "img/nabana.jpg" },
     { name: "Otaru", img: "img/otaru.jpg" },
     { name: "Nagano y monos de nieve", img: "img/nagano.jpg" },
-    { name: "RJ Cafe Osaka", img: "img/rjcafe.jpg" },
+    { name: "RJ Cafe Osaka", img: "img/rj-cafe.jpg" },
     { name: "Kumachan Onsen Tokyo", img: "img/kumachan.jpg" },
     { name: "Enoshima", img: "img/enoshima.jpg" },
     { name: "Ginzan Onsen", img: "img/ginzan.jpg" },
     { name: "Tarde de recreativas", img: "img/arcade.jpg" },
     { name: "Shibazakura park Hokkaido", img: "img/shibazakura.jpg" },
-    { name: "Musical Tokyo Revengers", img: "img/tokyorevengers.jpg" },
+    { name: "Musical Tokyo Revengers", img: "img/tokyo-revengers.jpg" },
     { name: "Eventos Kisekoi/Sailor Moon", img: "img/kisekoi.jpg" },
     { name: "Museo/cafe de los yokai", img: "img/yokai.jpg" },
     { name: "Kumamoto", img: "img/kumamoto.jpg" },
@@ -266,3 +266,4 @@
 </script>
 </body>
 </html>
+
