--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 </div>
 
 <script>
-  const saveEndpoint = "https://TU_PROYECTO.vercel.app/api/save";
-  const dataUrl = "https://raw.githubusercontent.com/TU_USUARIO/TU_REPO/main/results/data.json";
+  const saveEndpoint = "https://japotinder.vercel.app/api/save";
+  const dataUrl = "https://raw.githubusercontent.com/Syarapi/japotinder/main/results/data.json";
 
   let playerName = "";
   const originalData = [
@@ -266,4 +266,5 @@
 </script>
 </body>
 </html>
+
 
