--- a/index.html
+++ b/index.html
@@ -101,6 +101,28 @@
     width: 200px;
     text-align: center;
   }
+  table {
+    border-collapse: collapse;
+    margin-top: 15px;
+    width: 90%;
+    max-width: 500px;
+    background: white;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  }
+  table th, table td {
+    padding: 8px 12px;
+    border-bottom: 1px solid #ddd;
+    text-align: left;
+  }
+  table th {
+    background: #dda0dd;
+    color: white;
+  }
+  table tr:nth-child(even) {
+    background-color: #f8f4fb;
+  }
 </style>
 </head>
 <body>
@@ -145,6 +167,7 @@
 <div id="stats-screen">
   <h2>Estadísticas globales</h2>
   <canvas id="statsChart" width="400" height="400"></canvas>
+  <div id="extraStats"></div>
   <button class="btn reject" onclick="goToStart()">Volver</button>
 </div>
 
@@ -239,6 +262,8 @@
     document.getElementById('stats-screen').style.display = 'flex';
     const res = await fetch(dataUrl);
     const games = await res.json();
+
+    // Estadísticas globales
     const stats = {};
     games.forEach(g => {
       g.accepted.forEach(a => { stats[a] = stats[a] || { yes: 0, no: 0 }; stats[a].yes++; });
@@ -259,6 +284,52 @@
       },
       options: { responsive: true, scales: { x: { stacked: true }, y: { stacked: true } } }
     });
+
+    // Ranking TOP 5 tarjetas
+    const ranking = Object.entries(stats)
+      .sort((a, b) => b[1].yes - a[1].yes)
+      .slice(0, 5);
+
+    // Afinidad TOP 5 jugadores
+    const playerGame = games.find(g => g.player === playerName);
+    let affinity = [];
+    if (playerGame) {
+      const myYes = new Set(playerGame.accepted);
+      const otherPlayers = {};
+      games.forEach(g => {
+        if (g.player !== playerName) {
+          const commonYes = g.accepted.filter(a => myYes.has(a)).length;
+          if (!otherPlayers[g.player] || otherPlayers[g.player] < commonYes) {
+            otherPlayers[g.player] = commonYes;
+          }
+        }
+      });
+      affinity = Object.entries(otherPlayers)
+        .sort((a, b) => b[1] - a[1])
+        .slice(0, 5);
+    }
+
+    // Mostrar tablas
+    const extraStats = document.getElementById('extraStats');
+    extraStats.innerHTML = "";
+
+    let table1 = "<h3>TOP 5 tarjetas con más 'sí'</h3><table><tr><th>Tarjeta</th><th>Sí</th><th>No</th></tr>";
+    ranking.forEach(([name, val]) => {
+      table1 += `<tr><td>${name}</td><td>${val.yes}</td><td>${val.no}</td></tr>`;
+    });
+    table1 += "</table>";
+    extraStats.innerHTML += table1;
+
+    if (affinity.length > 0) {
+      let table2 = "<h3>TOP 5 jugadores más afines contigo</h3><table><tr><th>Jugador</th><th>Coincidencias</th></tr>";
+      affinity.forEach(([player, score]) => {
+        table2 += `<tr><td>${player}</td><td>${score}</td></tr>`;
+      });
+      table2 += "</table>";
+      extraStats.innerHTML += table2;
+    } else {
+      extraStats.innerHTML += "<p style='color:#dda0dd'>No hay datos de afinidad porque no has jugado aún.</p>";
+    }
   }
 
   function restartGame() { document.getElementById("results").style.display = "none"; document.getElementById("start-screen").style.display = "flex"; }
@@ -266,5 +337,3 @@
 </script>
 </body>
 </html>
-
-
